# fp-quantum

./: .gitignore  ARCHITECTURE_SIMPLIFICATION.md  PROJECT_STATUS.md  README.md  TEST_IMPLEMENTATION_SUMMARY.md  env.example  main.py  pyproject.toml  run_tests.sh
agents/: __init__.py
agents/analysis/: __init__.py  comparison_analyzer.py  process_identifier.py  requirement_parser.py
agents/base/: base_agent.py  performance_optimizer.py
agents/knowledge/: rule_retriever.py  validator.py
agents/orchestrator/: __init__.py  workflow_orchestrator.py
agents/output/: __init__.py  report_generator.py
agents/standards/: __init__.py  standard_recommender.py
agents/standards/cosmic/: __init__.py  boundary_analyzer.py  cfp_calculator.py  data_movement_classifier.py  functional_user_agent.py
agents/standards/nesma/: __init__.py  complexity_calculator.py  function_classifier.py  ufp_calculator.py
api/: main.py
config/: settings.py
graph/: node_functions.py  state_definitions.py  workflow_graph.py
knowledge_base/: __init__.py  auto_setup.py  rag_chains.py  sample_chunks.txt  search_test_results.txt
knowledge_base/documents/common/: 功能点估算快速参考.md  工作量拆分指南.md  术语对照表.md
knowledge_base/loaders/: __init__.py  custom_loaders.py  pdf_loader.py  web_loader.py
knowledge_base/retrievers/: __init__.py  keyword_retriever.py  multi_query_retriever.py  semantic_retriever.py
knowledge_base/vector_stores/: __init__.py  chroma_store.py  hybrid_search.py  mongodb_atlas.py  pgvector_store.py
scripts/: demo_knowledge_base.py  download_standards.py  enhance_knowledge_base.py  project_demo.py  run_comprehensive_tests.py  run_tests.sh  setup_knowledge_base.py  simple_kb_setup.py  validate_installation.py
tests/e2e/: test_full_workflow.py
tests/integration/: test_agents_integration.py
tests/unit/: test_cosmic_agents.py  test_knowledge_base.py  test_nesma_agents.py  test_workflow_nodes.py
