[project]
name = "fp-quantum"
version = "0.1.0"
description = "量子智能化功能点估算系统 - AI-powered Function Point Estimation System"
requires-python = ">=3.11"
authors = [
    {name = "boleyn", email = "genxm@vip.qq.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["function-point", "estimation", "nesma", "cosmic", "ai", "langchain"]

dependencies = [
    # LangChain核心生态
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0", # OpenAI兼容API支持（DeepSeek + BGE-M3）
    "langchain-postgres>=0.0.12", # PostgreSQL集成
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
    # 所有模型通过OpenAI兼容API调用
    "openai>=1.0.0", # 统一的API客户端
    # PgVector向量存储
    "psycopg[binary]>=3.1.0", # PostgreSQL异步驱动
    "pgvector>=0.3.0", # PgVector Python客户端
    "sqlalchemy>=2.0.0", # ORM支持
    "asyncpg>=0.29.0", # 异步PostgreSQL驱动
    # 数据库（MongoDB用于业务数据，非向量）
    "motor>=3.6.0", # MongoDB异步驱动
    "pymongo>=4.8.0", # MongoDB同步驱动
    # 文档处理（LangChain内置）
    "pypdf>=4.3.0", # PDF处理
    "unstructured>=0.15.0", # 结构化文档解析
    "beautifulsoup4>=4.12.0", # HTML解析
    # Web框架
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.9.0",
    # 工具库
    "tiktoken>=0.7.0", # Token计算
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
    "pillow-heif>=0.22.0",
    "typer>=0.9.0", # 命令行界面框架
    "rank-bm25>=0.2.2",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
]

web = [
    "gradio>=4.0.0",
    "jinja2>=3.1.0",
]

enterprise = [
    "redis>=4.6.0",                # 缓存支持
    "celery>=5.3.0",               # 异步任务队列
    "flower>=2.0.0",               # Celery监控
    "sentry-sdk>=1.40.0",          # 错误监控
]

[project.urls]
Repository = "https://github.com/boleyn/fp-quantum.git"
"Bug Tracker" = "https://github.com/boleyn/fp-quantum/issues"

[project.scripts]
fp-quantum = "main:main"
setup-kb = "scripts.setup_knowledge_base:main"
migrate-data = "scripts.data_migration:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["fp_quantum"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["fp_quantum"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.hatch.build.targets.wheel]
packages = [
    "agents",
    "api", 
    "config",
    "graph",
    "knowledge_base",
    "models",
    "scripts"
] 

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
]
